tracinhos divisao sil

--- a/INTRODUCAO.tex
+++ b/INTRODUCAO.tex
@@ -1,21 +1,23 @@
 \chapterspecial{Introdução}{}{André Itaparica}\label{introduuxe7uxe3o}
 
+\hyphenation{Nietz-sche}
+
 Publicada em 1874, a segunda das quatro considerações extemporâneas,
 \emph{Sobre a utilidade e a desvantagem da história para a vida}, foi a
 que teve a menor repercussão quando de seu lançamento. Não foi recebida
 com muito entusiasmo pelos círculos wagnerianos (causa pela qual
-Nietz\-sche militava), foi objeto de críticas severas de seu amigo e
+Nietzsche militava), foi objeto de críticas severas de seu amigo e
 leitor das primeiras provas de impressão, Erwin Rohde, e teve como
 resposta do grande historiador Jacob Burckhardt, seu colega na
 Universidade de Basileia, uma carta em grande medida formal e distante
-(embora Nietz\-sche não a tenha percebido exatamente dessa maneira). Sem
-entrar no mérito dessas avaliações, o fato é que Nietz\-sche se abateu com
+(embora Nietzsche não a tenha percebido exatamente dessa maneira). Sem
+entrar no mérito dessas avaliações, o fato é que Nietzsche se abateu com
 essa recepção imediata, e como resultado a obra passou a ser um livro
-pouco comentado pelo próprio Nietz\-sche.\footnote{Sobre a história da
+pouco comentado pelo próprio Nietzsche.\footnote{Sobre a história da
   curta elaboração da segunda extemporânea, da recepção inicial e de seu
-  efeito sobre o ânimo de Nietz\-sche, há um importante ensaio de Jörg
+  efeito sobre o ânimo de Nietzsche, há um importante ensaio de Jörg
   Salaquarda: ``Studien zur zweiten~Unzeitgemäßen Betrachtung''. In:
-  \emph{Nietz\-sche-Studien}, 13, 1984, pp. 1-45.} Em sua autobiografia,
+  \emph{Nietzsche-Studien}, 13, 1984, pp. 1--45.} Em sua autobiografia,
 \emph{Ecce homo}, ao contrário das demais considerações extemporâneas,
 que são exaltadas, a segunda ganha elogiosas, mas parcas linhas: ``A
 \emph{segunda} extemporânea traz à luz o que há de perigoso, corrosivo e
@@ -25,23 +27,23 @@ envenenador da vida na nossa forma de prática científica: a vida
 do trabalho'. Perde-se o fim, a cultura: -- o meio, a moderna prática
 científica, \emph{barbariza}... Nesse tratado o `sentido histórico', do
 qual nosso século se orgulha, foi pela primeira vez reconhecido como
-doença, como signo típico da decadência''.\footnote{Nietz\-sche, F.
+doença, como signo típico da decadência''.\footnote{Nietzsche, F.
   \emph{Ecce homo.} Berlim/Munique: Walter de Gruyter, 1988, p. 316.}
 Não deixa de ser irônico que posteriormente esse escrito sobre a
 história passaria a ter um reconhecimento por parte da fortuna crítica
-só comparável, entre as primeiras obras de Nietz\-sche, ao
+só comparável, entre as primeiras obras de Nietzsche, ao
 \emph{Nascimento da tragédia}. Nos livros clássicos de Karl
 Jaspers\footnote{Jaspers, Karl.
-  \emph{Nietz\-sche:}~Einführung~in das Verständnis seines
+  \emph{Nietzsche:}~Einführung~in das Verständnis seines
   Philosophierens. Berlim: Walter de Gruyter, 1936.} e Walter
 Kaufmann\footnote{Kaufmann, Walter.
-  \emph{Nietz\-sche:}~Philosopher,~Psychologist,
+  \emph{Nietzsche:}~Philosopher,~Psychologist,
   Antichrist. Princeton: Princeton University Press, 1950.}, a
 segunda extemporânea tem um lugar de destaque na discussão sobre a
-filosofia da história de Nietz\-sche, e Martin Heidegger chegou a conduzir
+filosofia da história de Nietzsche, e Martin Heidegger chegou a conduzir
 um seminário exclusivo sobre ela, em Freiburg, no semestre de inverno de
-1938-39. Hoje poucos discordariam de que é muito difícil discutir a
-filosofia da história e a filosofia da cultura de Nietz\-sche sem recorrer
+1938--39. Hoje poucos discordariam de que é muito difícil discutir a
+filosofia da história e a filosofia da cultura de Nietzsche sem recorrer
 a esse livro complexo, ambíguo e provocativo.
 
 Esse caráter de texto de intervenção das extemporâneas é um traço
@@ -52,7 +54,7 @@ preocupação: \emph{Unzeitgemässe Betrachtungen} pode ser parafraseado
 como ``considerações, reflexões ou meditações que trazem a marca da
 inconformidade e intempestividade para com a época presente''. E se as
 primeiras linhas do prefácio trazem fortes palavras de Goethe, ele se
-encerra, por sua vez, com as não menos fortes palavras de Nietz\-sche,
+encerra, por sua vez, com as não menos fortes palavras de Nietzsche,
 apresentando uma definição lapidar do que ele entende por
 extemporaneidade: ``Para tanto, permito-me confessar, até pela minha
 profissão de filólogo clássico: não saberia que sentido teria a
@@ -67,7 +69,7 @@ acordo. Apesar de em seu título constar a palavra de origem latina
 \emph{Historie} -- e não o termo de origem germânica \emph{Geschichte}
 --, o que conotaria um estudo exclusivo sobre uma disciplina acadêmica,
 a historiografia, sua discussão não se limita a essa fronteira.
-Nietz\-sche debate sobretudo as consequências culturais da espécie de
+Nietzsche debate sobretudo as consequências culturais da espécie de
 relação com a história que é fomentada por uma época. Não se trata,
 também, como muito se pensou e sua própria narrativa em \emph{Ecce homo}
 pode nos levar a crer, de uma avaliação unicamente negativa da cultura
@@ -79,7 +81,7 @@ de forma imprevista e surpreendente.
 
 O título \emph{Sobre a utilidade e desvantagem da história para a vida},
 se bem interpretado, já nos oferece muitas pistas sobre o tema e o
-objetivo do livro. Nietz\-sche procura realizar um estudo sobre o
+objetivo do livro. Nietzsche procura realizar um estudo sobre o
 historicismo, nas inflexões que lhe são contemporâneas (particularmente
 o hegelianismo e o positivismo), mas, e isso é o fundamental,
 identificando nessas escolas antes de tudo uma exacerbação de uma
@@ -91,22 +93,22 @@ sua experiência no mundo), cabe saber até que ponto ela auxilia ou
 prejudica a vida, vista aqui não como um conceito biológico, mas como a
 experiência da vida humana, que só pode ser pensada no interior de uma
 cultura, como bem observaram Martin Heidegger\footnote{
-  Heidegger, Martin. \emph{Zur Auslegung von Nietz\-sches \versal{II}.}
+  Heidegger, Martin. \emph{Zur Auslegung von Nietzsches \versal{II}.}
   Unzeitgemässer Betrachtung. Frankfurt am Main: Klostermann,
   2005.}
 e Volker Gerhardt\footnote{``Leben und Geschichte. Menschliches Handeln
-  und historischer Sinn in Nietz\-sches zweiter `Unzeitgemäßer
+  und historischer Sinn in Nietzsches zweiter `Unzeitgemäßer
   Betrachtung'''. In: \emph{Pathos und Distanz.} Studien zur
-  Philosophie Friedrich Nietz\-sches. Stuttgart: Reclam-Verlag, 1988,
+  Philosophie Friedrich Nietzsches. Stuttgart: Reclam-Verlag, 1988,
   133--162.}. Vemos, assim, que há um contexto filosófico e
 antropológico vasto e profundo nessa compreensão da história. Do mesmo
-modo, a crítica de Nietz\-sche ao fazer histórico de sua época não se
+modo, a crítica de Nietzsche ao fazer histórico de sua época não se
 reduz à disciplina histórica, nem às correntes filológicas de sua
 época,\footnote{Sobre uma possível relação entre as três formas de
-  história e as correntes filológicas da época de Nietz\-sche, ver:
-  Jensen, Anthony K. ``Geschichte~or~Historie? Nietz\-sche's
+  história e as correntes filológicas da época de Nietzsche, ver:
+  Jensen, Anthony K. ``Geschichte~or~Historie? Nietzsche's
   Second Untimely Meditation in the Context of Nineteenth-Century
-  Philological Studies''. In: Dries, Manuel (ed.). \emph{Nietz\-sche on
+  Philological Studies''. In: Dries, Manuel (ed.). \emph{Nietzsche on
   Time and~History.} Berlin: Walter de Gruyter, 2008.} mas às próprias
 concepções de ciência e de conhecimento que permeiam essa prática e,
 mais que isso, às consequências que essa prática pode ter em toda uma
@@ -119,7 +121,7 @@ queremos a ela servir; mas existe um grau no exercício e na valorização
 da história em que a vida fenece e se degenera: um fenômeno que
 experimentamos agora, tão necessário quanto doloroso possa ser, como um
 estranho sintoma de nossa época'' (p.\,\pageref{sintomadenossaepoca}). Essa desmedida de estudos
-históricos representa, segundo Nietz\-sche, aquela espécie de conhecimento
+históricos representa, segundo Nietzsche, aquela espécie de conhecimento
 que Goethe consideraria digna de ódio, por não conduzir à ação. Por
 outro lado, o reconhecimento de um serviço da história para a vida
 aponta para o seu aspecto afirmativo, o que será desenvolvido nos três
@@ -250,7 +252,7 @@ erro, é também um desserviço à própria vida. O historiador, seja ele
 monumental, antiquário ou crítico, não é um espectador imparcial do
 passado; seu conhecimento já é uma perspectiva que recorta os eventos
 pretéritos de acordo com seu caráter, pendor e desejo. E a não ser que
-se tenha o sonho positivista, para Nietz\-sche não se deve lamentar essa
+se tenha o sonho positivista, para Nietzsche não se deve lamentar essa
 característica falsificadora da história, desde que ela seja bem dosada
 e represente o exercício daquela força plástica com que o homem se
 apodera do passado em nome da ação e da vida. Mais uma vez, trata-se de
@@ -264,10 +266,10 @@ indivíduo que não possua as aptidões necessárias: a história monumental
 sem a força para realizar grandes ações, a antiquária sem a reverência à
 tradição, a crítica sem a necessidade de se libertar do passado. Em
 segundo lugar, que o sentido histórico se torne dominante e onipresente,
-levando toda uma cultura a uma séria crise, algo que Nietz\-sche, como
+levando toda uma cultura a uma séria crise, algo que Nietzsche, como
 sabemos, considera acontecer no momento em que escreve sua extemporânea.
 
-Em sua época, diz Nietz\-sche, uma relação profícua entre história e vida
+Em sua época, diz Nietzsche, uma relação profícua entre história e vida
 se tornou impossível. Isso porque a história passou a ser considerada
 uma ciência positiva, ocupando-se apenas de acumular os dados os mais
 variados. Essa identificação entre ``cultura'' e ``cultura histórica''
@@ -279,7 +281,7 @@ conteúdo, que é fatal para a vida. Para quem já tinha definido a
 cultura, na primeira extemporânea, ``como unidade do estilo artístico em
 todas as expressões vitais de um povo'' (p.\,\pageref{vitaisdeumpovo}), essa multiplicidade
 desagregada provocada pelo excesso de história só poderia conduzir a uma
-cultura artificial. E entre os povos modernos, para Nietz\-sche o alemão é
+cultura artificial. E entre os povos modernos, para Nietzsche o alemão é
 o que mais tem uma interioridade exacerbada, com prejuízo do sentido da
 forma, produzindo assim uma cultura fraca e que acaba por se tornar um
 pastiche de outras culturas mais fortes. Essa visão sobre os alemães sem
@@ -293,7 +295,7 @@ de acumular dados, compará-los e criticá-los, sem estabelecer uma
 relação com a vida, então o pesquisador, tornado mais um trabalhador
 braçal do que um instrumento da cultura, tratará seu material como um
 entre tantos outros. O trabalho intelectual, assim, torna-se uma
-atividade meramente burocrática e pouco inventiva. Nietz\-sche, ecoando a
+atividade meramente burocrática e pouco inventiva. Nietzsche, ecoando a
 crítica de Schopenhauer, lamenta a redução da filosofia a mera historiografia: 
 ``Em que condições inaturais, artificiais e em todo caso
 indignas se encontra, em uma época que padece da cultura geral, a mais
@@ -311,7 +313,7 @@ Ao mesmo tempo, o homem moderno, com sua cultura histórica, por ter
 passado os olhos pelas mais diversas eras e acumulado conhecimento sobre
 elas, tem a ilusão de por isso ser mais justo do que os homens de épocas
 anteriores. Essa suposta justiça, no entanto, tem seus critérios de
-avaliação questionados por Nietz\-sche. O homem moderno, diz ele, acaba
+avaliação questionados por Nietzsche. O homem moderno, diz ele, acaba
 por adequar e julgar o passado a partir dos seus próprios valores
 atuais. Assim, a cultura histórica é, ironicamente, traída por seu
 anacronismo. Com seu elogio à objetividade e sua suspeita do
@@ -319,9 +321,9 @@ subjetivismo, o historiador científico se ilude de que é capaz de
 reproduzir o passado fidedignamente, quando na verdade apenas reproduz o
 passado a partir das ideias vigentes em sua época. O problema, mais uma
 vez, não é tanto o falseamento, mas a ilusão de objetividade. Para
-Nietz\-sche, a história deve ser escrita com os olhos no presente, como
+Nietzsche, a história deve ser escrita com os olhos no presente, como
 incentivo à ação, e não apenas como a reprodução ilusoriamente objetiva
-de um passado. Desse modo, o que Nietz\-sche espera do historiador é que
+de um passado. Desse modo, o que Nietzsche espera do historiador é que
 ele tenha a força da criação e a capacidade da ação. Só assim o passado
 servirá para a construção do futuro.
 
@@ -330,24 +332,24 @@ A forma moderna de praticar a história ignora a atmosfera aistórica que
 serviço da vida. Com isso, ela não só não alcança a pretendida
 objetividade, como também acaba por matar o que há de vida em seu
 objeto. Uma religião que fosse vista apenas pelo seu aspecto histórico,
-diz Nietz\-sche, seria o suicídio da própria fé. Ela se tornaria puro
+diz Nietzsche, seria o suicídio da própria fé. Ela se tornaria puro
 conhecimento da religião e não o exercício de uma crença, pois perderia
 sua aura sobrenatural. A história, por isso, deveria aproximar-se da
 arte, deveria exercer aquela força plástica, que é uma força artística,
-e se transformar em obra de arte. Para Nietz\-sche, isso seria a
+e se transformar em obra de arte. Para Nietzsche, isso seria a
 realização da história de acordo com os instintos humanos mais naturais.
-O retrato que Nietz\-sche faz da cultura histórica, em resumo, é a imagem
+O retrato que Nietzsche faz da cultura histórica, em resumo, é a imagem
 de uma erudição vazia e balofa, que acumula informações sem seleção e
 que se ilude de sua própria importância, quando na verdade representa a
 negação de uma verdadeira cultura.
 
-Nos capítulos finais, Nietz\-sche considera como a época em que prevalece
+Nos capítulos finais, Nietzsche considera como a época em que prevalece
 essa cultura histórica reflete uma consciência irônica sobre si mesma: a
 de que ela é incapaz de triunfar sobre si mesma e de que seu valor
 reside unicamente em ser epigonal. Como marca dessa autoconsciência, que
-se concebe como o final de um processo universal, Nietz\-sche vê em Hegel
+se concebe como o final de um processo universal, Nietzsche vê em Hegel
 a grande influência, e em Eduard von Hartmann sua paródia. No caso de
-Hegel, Nietz\-sche ironiza sua concepção da história como teleologia,
+Hegel, Nietzsche ironiza sua concepção da história como teleologia,
 assim como sua pretensão de encontrar na história leis necessárias e o
 progresso do espírito, numa \emph{boutade} célebre: ``para Hegel, o
 ápice e o fim último do processo universal coincidem em sua própria
@@ -363,26 +365,26 @@ fazer sua parte para facilitar esse fracionamento histórico progressivo
 da ideia consciente a partir da vontade inconsciente e, nessa época em
 particular, para realizar as condições para permitir o `fim
 providencial' que é o niilismo cultural''.\footnote{Jensen, Anthony K.
-  ``The Rogue of All Rogues: Nietz\-sche's Presentation of Eduard von
+  ``The Rogue of All Rogues: Nietzsche's Presentation of Eduard von
   Hartmann's Philosophie des Unbewussten and Hartmann's Response
-  to Nietz\-sche''. In: \emph{Journal of Nietz\-sche Studies,} 32, 2006, p.
+  to Nietzsche''. In: \emph{Journal of Nietzsche Studies,} 32, 2006, p.
   45.} Em outras palavras, Hartmann adota uma vontade inconsciente (mas
 teleologicamente orientada) que se desenvolve num processo histórico
 universal até a realização do absoluto, que representa o \emph{telos}
-último e tem um caráter niilista. Diante dessa filosofia, Nietz\-sche a
+último e tem um caráter niilista. Diante dessa filosofia, Nietzsche a
 caracterizará como uma paródia da filosofia da história hegeliana, que
 não se reconheceria como pândega, numa espécie de humor involuntário.
 Atribuindo a Hartmann pejorativamente o epíteto ``galhofeiro dos
-galhofeiros'', Nietz\-sche cita algumas passagens da \emph{Filosofia do
+galhofeiros'', Nietzsche cita algumas passagens da \emph{Filosofia do
 inconsciente} como exemplo de uma época senil, que se satisfaz em
 compreender como o fim último da existência a mediocridade cultural e
 que não vê a história como o resultado da ação humana individual 
 (Hartmann teve oportunidade de se vingar posteriormente, em 1891 e em
-1898, quando Nietz\-sche já não estava consciente, negando-lhe maior
+1898, quando Nietzsche já não estava consciente, negando-lhe maior
 significado na filosofia e acusando-o de plagiário de Stirner).
 
 No último capítulo, enfim, em contraposição a essa época senil,
-Nietz\-sche faz uma exortação à juventude, como esperança para a tão
+Nietzsche faz uma exortação à juventude, como esperança para a tão
 ansiada renovação da cultura alemã. É quando ele retorna, então, ao
 aspecto afirmativo da história, lembrando que caberá à juventude
 libertar-se da educação histórica que lhe é impingida e praticar a
@@ -404,7 +406,7 @@ poucos a \emph{organizar o caos} ao se voltarem, segundo o ensinamento
 délfico, a refletir sobre si, isto é, sobre suas necessidades autênticas
 e deixar perecer as necessidades ilusórias'' (p.\,\pageref{necessidadesilusorias}).
 
-Como se vê, Nietz\-sche abarca, nesta breve \emph{Consideração
+Como se vê, Nietzsche abarca, nesta breve \emph{Consideração
 extemporânea}, um grande número de temas e preocupações, cujo núcleo é a
 história, não apenas e propriamente como disciplina acadêmica, mas como
 fundamento antropológico e forma de vida. A maior parte do livro, e a
