--- a/TEXTO-ORIGINAL.tex
+++ b/TEXTO-ORIGINAL.tex
@@ -100,8 +100,8 @@ silencia, e o homem se espanta.\footnote{Passagem inspirada no poema
   animal,/ No descanso, na indolência,/ Tem alegria, enquanto eu me
   enfastio/ Assim que descanso?''. Tradução baseada na alemã de
   Robert Hamerling (\emph{Leopardi's Gedichte}. Hildburghausen, 1866),
-  versão que, como mostrou Otto Friedrich Bollonow, Nietz\-sche
-  provavelmente conheceu (``Nietz\-sche und Leopardi''. \emph{Zeitschrift
+  versão que, como mostrou Otto Friedrich Bollonow, Nietzsche
+  provavelmente conheceu (``Nietzsche und Leopardi''. \emph{Zeitschrift
   für philosophische Forschung,} 26, 1972).}
 
 No entanto, ele se espanta consigo mesmo, por não poder aprender a
@@ -135,7 +135,7 @@ esquecimento. Então aprende a entender a palavra ``era'', aquela senha
 que, junto com a luta, a dor e o fastio, leva o homem a se lembrar do
 que, no fundo, é sua existência -- um imperfectivo que nunca se
 perfaz.\footnote{Em alemão: \emph{ein nie zu vollendendes Imperfectum}.
-  Traduzimos por imperfectivo para explicitar que Nietz\-sche faz uso aqui
+  Traduzimos por imperfectivo para explicitar que Nietzsche faz uso aqui
   de um termo gramatical, referente aos tempos dos verbos que expressam
   ações passadas inacabadas.} Quando a morte enfim traz o seu ansiado
 esquecimento, rouba também o presente e a existência, selando com
@@ -256,7 +256,7 @@ anti-histórica -- o útero não apenas do ato injusto, mas, ao contrário,
 de todo ato justo; e nenhum artista alcançará sua obra, nenhum general,
 sua vitória, nenhum povo, sua liberdade, sem antes ter querido e ansiado
 tal estado aistórico. Assim como todo homem de ação, segundo as palavras
-de Goethe, é inescrupuloso, ele também é leviano;\footnote{Nietz\-sche se refere ao seguinte
+de Goethe, é inescrupuloso, ele também é leviano;\footnote{Nietzsche se refere ao seguinte
   aforismo de Goethe: ``O homem de ação (\emph{Handelnde}) é sempre
   inescrupuloso; ninguém possui mais consciência que o homem
   contemplativo (\emph{Betrachtende}).'' (``Maximen und Reflexionen''.
@@ -275,9 +275,9 @@ Se alguém pudesse estar em condições, em diversos casos, de inalar e
 respirar essa atmosfera aistórica, na qual todo evento histórico
 grandioso surge, esse alguém poderia talvez, enquanto um ser que
 conhece, elevar-se a um ponto de vista \emph{supra-histórico}, tal como
-o descreveu Niebuhr\footnote{Barthold G. Niebuhr (1776-1831),
+o descreveu Niebuhr\footnote{Barthold G. Niebuhr (1776--1831),
   historiador prussiano. Até o momento não se identificou a fonte da
-  citação que Nietz\-sche faz a seguir.}, como resultado possível da
+  citação que Nietzsche faz a seguir.}, como resultado possível da
 consideração histórica. Diz ele: ``Entendida de maneira clara e precisa,
 a história é útil ao menos para uma coisa -- para que se saiba como também
 os maiores e superiores espíritos da espécie humana não sabem quão
@@ -306,7 +306,7 @@ sobre os quais David Hume comentou com ironia:
 \emph{What the first sprightly running could not give.}\\
 E, do que sobrou no copo da vida,\qb{} esperam tomar\\
 Aquilo que o primeiro gole de vigor\qb{} não pôde dar.\footnote{Segundo
-  Walter Kaufmann (\emph{Nietz\-sche} -- Philosopher, psychologist,
+  Walter Kaufmann (\emph{Nietzsche} -- Philosopher, psychologist,
   antichrist. Princeton: Princeton University Press, 1974),
   citação da peça ``Aureng-zebe'', de John Dryden, incluída no
   \emph{Diálogo sobre a religião natural,} de Hume. No original consta
@@ -358,7 +358,7 @@ Nada que vive\\
 a Terra merece.\\
 Dor e tédio é nosso ser, e o mundo\\
 é um lodo -- e nada mais.\\
-Assossega-te.\footnote{Nietz\-sche cita um trecho do poema ``A se
+Assossega-te.\footnote{Nietzsche cita um trecho do poema ``A se
   stesso'' (Para si mesmo), de Leopardi.}
 \end{verse}
 \end{quote}
@@ -638,12 +638,12 @@ de séculos obscuros e confusos, a alma de seu povo como a sua própria
 alma; um sentimento transpassa e daí surge uma nostalgia, um farejar de
 rastros apagados, uma leitura correta de um passado rasurado, um
 entendimento ágil do palimpsesto, até mesmo do \emph{polipsesto}\footnote{Neologismo
-  de Nietz\-sche, em analogia a ``palimpsesto''. Depreende-se que o
+  de Nietzsche, em analogia a ``palimpsesto''. Depreende-se que o
   sentido seja o de um pergaminho cujo manuscrito foi apagado e
   reutilizado muitas vezes.} -- estes são seus talentos e virtudes. Com
 eles, Goethe quedou-se diante do monumento de Erwin von
 Steinbach\footnote{Arquiteto alemão que construiu a catedral de
-  Estrasburgo. Na passagem seguinte, Nietz\-sche faz alusão ao ensaio de
+  Estrasburgo. Na passagem seguinte, Nietzsche faz alusão ao ensaio de
   ``Von deutscher Baukunst'' (Sobre a arquitetura alemã), de Goethe.};
 na tempestade de seu sentimento rasgou o véu nebuloso que a história
 estendeu entre eles: ele viu, pela primeira vez, a obra alemã
@@ -756,7 +756,7 @@ força de vida e esquecimento quando viver e ser injusto são uma única
 coisa. Lutero pensou, certa feita, que o mundo só surgiu graças a um
 esquecimento de Deus, isto é, se Deus tivesse pensado nos ``armamentos
 pesados'', não teria criado o mundo.\footnote{Segundo o tradutor francês,
-  Nietz\-sche faria referência aqui à seguinte passagem dos discursos
+  Nietzsche faria referência aqui à seguinte passagem dos discursos
   (\emph{Tischreden}) de Lutero: ``Se Adão pudesse ter visto os
   artefatos fabricados por seus filhos, ele teria morrido de desgosto''.}
 Mas a mesma vida que precisa do esquecimento precisa, de vez em quando,
@@ -901,7 +901,7 @@ tornará uma primeira.
     conhecer borbotoam e podem ser colocadas, com apuro, nas caixas da
     memória. A cultura de um povo, como o oposto dessa barbárie, foi uma
     vez designada -- com algum direito, como penso -- como unidade do
-    estilo artístico em todas as expressões vitais de um povo;\footnote{Nietz\-sche
+    estilo artístico em todas as expressões vitais de um povo;\footnote{Nietzsche
       refere-se aqui a sua formulação de cultura presente na primeira
       extemporânea, \emph{David Strauss, o devoto e o escritor}.}\label{vitaisdeumpovo} essa
     designação não deve ser mal-entendida como se se tratasse de uma
@@ -971,7 +971,7 @@ tornará uma primeira.
     aquela interioridade ali sentasse, sem poder ser vista, falsificada,
     colorida, pintada, fazendo as vezes de atriz, quando não coisa pior:
     como parece concordar, por exemplo, Grillparzer\footnote{Franz
-      Grillparzer (1791-1872), poeta e dramaturgo austríaco.}, que
+      Grillparzer (1791--1872), poeta e dramaturgo austríaco.}, que
     observa, de modo marginal e discreto, a partir de sua experiência
     dramático-teatral: ``Nós sentimos com abstrações'', diz ele, 
     ``não mais sabemos como nossos contemporâneos expressam seus sentimentos; 
@@ -1074,7 +1074,7 @@ esse ``mesmo'' é o mais importante: pois, ao não entendê-lo, seu senso é
 mais infantil do que o da criança e mais ingênuo do que a
 ingenuidade\footnote{Ao traduzir \emph{Einfalt} (ingênuo) e
   \emph{Einfaltheit} (ingenuidade) perdemos em português a imagem que
-  Nietz\-sche fará em seguida com a palavra \emph{Falte} (dobra).} --
+  Nietzsche fará em seguida com a palavra \emph{Falte} (dobra).} --
 apesar das pequenas e hábeis dobras que realiza no pergaminho e no
 exercício virtuoso de seus dedos ao desembaraçar o embaraçado.
 Conclusão: ele destruiu e perdeu seu instinto; não pode mais confiar e
@@ -1167,7 +1167,7 @@ homens, só o seriam para Aquele ``que sonda os rins''.\footnote{Ironia
 deuses, nem animais, e sim produtos de cultura histórica, inteiramente
 formação, imagem, forma sem conteúdo comprovável, infelizmente má forma,
 e além disso uniforme.\footnote{Não foi possível manter aqui todo o jogo
-  que Nietz\-sche faz com os radicais \emph{Bild} e \emph{Form}: ``Für
+  que Nietzsche faz com os radicais \emph{Bild} e \emph{Form}: ``Für
   jeden Anderen sind sie etwas Anderes, nicht Menschen, nicht Götter,
   nicht Thiere, sondern historische \emph{Bild}ungsge\emph{bild}e, ganz
   und gar \emph{Bild}ung, \emph{Bild}, \emph{Form} ohne nachweisbaren
@@ -1433,7 +1433,7 @@ isso, o incômodo de povos inteiros e anos de trabalho exaustivo nada
 significaram, nas ciências naturais, senão o acúmulo de experimento
 atrás de experimento, muito depois que a lei foi deduzida do tesouro da
 experiência; aliás, segundo Zöllner\footnote{Johann Karl Friedrich
-  Zöllner (1834-82), astrônomo e físico alemão.}, a ciência natural
+  Zöllner (1834--82), astrônomo e físico alemão.}, a ciência natural
 atual padece dessa absurda desmesura do experimento. Se o valor de um
 drama residisse no desfecho e nas ideias principais, o próprio drama
 seria possivelmente um caminho longo e sinuoso em direção a um fim; e,
@@ -1499,7 +1499,7 @@ historiadores; muito menos confundi-los com estes últimos, mas
 compreendê-los como aprendizes e ajudantes braçais a serviço do mestre,
 assim como os franceses, com mais ingenuidade do que os alemães,
 costumam falar dos \emph{historiens de} M. Thiers\footnote{Lous A.
-  Thiers (1797-1877), historiador francês. O sentido da expressão em
+  Thiers (1797--1877), historiador francês. O sentido da expressão em
   francês é: ``os historiadores que trabalham para M. Thiers''.}. Esses
 trabalhadores braçais devem paulatinamente tornar-se eruditos, mas por
 isso nunca poderão ser mestres. Um grande erudito e um grande cabeça-oca
@@ -1572,7 +1572,7 @@ voltairiano.\footnote{Referência ao ``destruam a infame'', ou seja, a
 poder-se-ia então considerar a dita União Protestante\footnote{Instituição
   alemã, fundada no século \versal{XIX}, que unia diversos segmentos da igreja
   reformada.} como o útero de uma nova religião, e um jurista como
-Holtzendorf\footnote{Franz von Holtzendorf (1829-89), jurista alemão.}
+Holtzendorf\footnote{Franz von Holtzendorf (1829--89), jurista alemão.}
 (como editor e prefaciador da dita Bíblia protestante), o João do Rio
 Jordão. Talvez essa época auxilie a filosofia hegeliana, que ainda
 tortura as velhas cabeças, na propagação daquela inocuidade,
@@ -1793,7 +1793,7 @@ esperanças: só contra a vontade ela deixa que o devir a estimule e, no
 momento certo, o desconsidera e o sacrifica, como uma sedução para a
 existência, como uma mentira a respeito da vida. Aquilo que os
 florentinos faziam, quando eles, impressionados com os sermões de
-Savonarola\footnote{Girolamo Savonarola (1452-98), frade italiano.},
+Savonarola\footnote{Girolamo Savonarola (1452--98), frade italiano.},
 patrocinaram aquelas célebres fogueiras sacrificais, queimando quadros,
 manuscritos, espelhos e máscaras, o cristianismo podia fazer com
 qualquer cultura que estimula a perseverança e toma o \emph{memento
@@ -1835,7 +1835,7 @@ afirmativo da vida e original. Ou deve ser verdade que nós alemães --
 deixando os povos românicos fora do jogo -- temos de ser, nas questões
 superiores da cultura, sempre tardios, porque só isso \emph{podemos}
 ser, como expressa essa instigante frase de Wilhelm
-Wackernagel\footnote{Wilhelm Wackernagel (1806-69), filólogo alemão.
+Wackernagel\footnote{Wilhelm Wackernagel (1806--69), filólogo alemão.
   Citação da obra \emph{Ensaios sobre a história literária alemã}.}:
 
 \begin{quote}
@@ -2426,7 +2426,7 @@ Neste momento, pensando na \emph{juventude}, eu brado: terra à
     palavras. Aquele despertar de uma palavra para vida não foi
     igualmente a morte dos seus criadores, em certo sentido eles ainda
     vivem; pois quando, como disse Gibbon\footnote{Edward Gibbon
-      (1737-94), historiador inglês.}, é preciso muito tempo para que um
+      (1737--94), historiador inglês.}, é preciso muito tempo para que um
     mundo decline, do mesmo modo é preciso muito tempo para que, na
     Alemanha, ``a terra do processo paulatino'', um falso conceito
     decline. Pelo menos talvez haja centenas de homens, distantes há
@@ -2436,9 +2436,9 @@ Neste momento, pensando na \emph{juventude}, eu brado: terra à
     alemães até agora não possuem, mesmo que falem ou se orgulhem disso.
     O contentamento geral dos alemães com sua cultura lhes parecerá tão
     incrível e medíocre quanto, para nós, foi o reconhecimento de
-    Gottsched\footnote{Johann Christoph Gottsched (1700-66), filósofo
+    Gottsched\footnote{Johann Christoph Gottsched (1700--66), filósofo
       alemão e crítico literário.} como um clássico e Ramler\footnote{Karl
-      Wilhelm Ramler (1725-98), poeta e tradutor alemão.} como o Píndaro
+      Wilhelm Ramler (1725--98), poeta e tradutor alemão.} como o Píndaro
     alemão. Talvez eles julgarão que essa cultura seja apenas uma
     espécie de saber acerca da cultura e por isso seja certamente um
     saber falso e superficial. Falso e superficial porque carrega a
