--- a/fichatecnica.sty
+++ b/fichatecnica.sty
@@ -5,10 +5,9 @@
 \newcommand{\sumariotitulo}{\titulo}
 \newcommand{\sumarioautor}{\autor}
 
-\newcommand{\organizador}{André Luís Mota Itaparica}
+\newcommand{\organizador}{André Itaparica}
 \newcommand{\autor}{Friedrich Nietzsche}
 %\newcommand{\introdutor}{Introdutor}  % Obrigatório!
-\newcommand{\tradutor}{André Luís Mota Itaparica}
 
 % Capa
 %\newcommand{\orelha}{}
