--- a/LIVRO.tex
+++ b/LIVRO.tex
@@ -1,14 +1,22 @@
-\documentclass[semcabeco,showtrims,11pt,conselho,spreadimages]{memoir}
+\documentclass[showtrims,12pt,conselho,spreadimages]{memoir}
 
-\usepackage{commands}
-\usepackage[bolso]{hedra}
-
-\usepackage{gitrevisioninfo}
+\usepackage[largepost]{hedraoptions} %% << %%%%%%%%%%%%%%%%
+\usepackage[baruch]{hedrastyles}
+\usepackage[xetex,chicagofootnotes]{tipografia}
+\usepackage[standart,sempontinhos]{toc}
+\usepackage{hedraextra}
 \usepackage{penalidades}
+\usepackage{graficos}
+\usepackage{hedralogo}
+\usepackage{hifensextras}
+\usepackage{fichatecnica}
+\usepackage[standart]{aparatos}
+\usepackage{tabelas}
+\usepackage{versos}
+\usepackage{gitrevisioninfo}
 
-\renewcommand{\pontinhos}{.}
-
-\renewcommand{\asterisc}{{\centering\adforn{47}\par}}
+%\linespread{1.08}
+\usepackage{commands}
 
 \begin{document}
 
