--- a/fichatecnica.sty
+++ b/fichatecnica.sty
@@ -21,13 +21,13 @@
 %\newcommand\copyrightorganizacao{}
 %\newcommand\copyrightilustracao{}
 %\newcommand\copyrightintroducao{}
-\newcommand\titulooriginal{Vom Nutzen und Nachteil der Historie für das Leben}
+\newcommand\titulooriginal{\emph{Vom Nutzen und Nachteil der Historie für das Leben}}
 \newcommand\edicaoconsultada{\emph{Sämtliche Werke.} De Gruyter, 1988}
 \newcommand\primeiraedicao{1874}
 %\newcommand\agradecimentos{}
 %\newcommand\indicacao{}
-\newcommand\ISBN{978-85-7715-545-3}
-\newcommand\ano{2014}
+\newcommand\ISBN{978-85-7715-580-4}
+\newcommand\ano{2018}
 \newcommand\edicao{Jorge Sallum}
 \newcommand\coedicao{José Eduardo Góes}
 \newcommand\assistencia{Equipe Hedra}
