--- a/INTRODUCAO.tex
+++ b/INTRODUCAO.tex
@@ -2,7 +2,7 @@
 
 \hyphenation{Nietz-sche}
 
-Publicada em 1874, a segunda das quatro considerações extemporâneas,
+\noindent Publicada em 1874, a segunda das quatro considerações extemporâneas,
 \emph{Sobre a utilidade e a desvantagem da história para a vida}, foi a
 que teve a menor repercussão quando de seu lançamento. Não foi recebida
 com muito entusiasmo pelos círculos wagnerianos (causa pela qual
