pequena correção do tradutor

--- a/TEXTO-ORIGINAL.tex
+++ b/TEXTO-ORIGINAL.tex
@@ -825,7 +825,7 @@ tornará uma primeira.
     assistiu a esse espetáculo de forma tão explícita como a ciência do
     devir universal, a história, hoje o apresenta; certamente ela o
     apresenta com a perigosa temeridade de seu lema: \emph{Fiat veritas
-    pereat vita.}\footnote{Que a verdade se realize e que o mundo pereça.}
+    pereat vita.}\footnote{Que a verdade se realize e que a vida pereça.}
 
     Imaginemos agora o processo mental presente na alma do homem
     moderno. O saber histórico flui, continuamente e em diversas
